@@ -1,11 +1,11 @@
-<link href="<?php echo GO::config()->theme_url; ?>Default/images/groupoffice.ico?" rel="shortcut icon" type="image/x-icon">
-<title><?php echo GO::config()->title; ?></title>
-<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
 <?php
 $root_path = $GLOBALS['GO_CONFIG']->root_path.'views/Extjs3/';
 $root_url = $GLOBALS['GO_CONFIG']->host.'views/Extjs3/';
-
-
+?>
+<link href="<?php echo $root_url; ?>Default/images/groupoffice.ico?" rel="shortcut icon" type="image/x-icon">
+<title><?php echo GO::config()->title; ?></title>
+<meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+<?php
 $GLOBALS['GO_THEME']->add_stylesheet($root_path.'ext/resources/css/ext-all.css', $root_url.'ext/resources/css/');
 $GLOBALS['GO_THEME']->add_stylesheet($root_path.'themes/Default/style.css', $root_url.'themes/Default/');
 $GLOBALS['GO_THEME']->add_stylesheet($root_path.'themes/ExtJS/style.css', $root_url.'themes/ExtJS/');
